[package]
name = "SpaceWarp-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
macroquad = "0.3.25"
macroquad-text = "0.1.1"
tokio = { version = "1.28.2", features = ["full"] }

[[bin]]
name = "space_warp-rust"
path = "src/main.rs"
