[package]
name = "SpaceWarp-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.15.0"
lazy_static = "1.4.0"
macroquad = "0.3.25"
macroquad-text = "0.1.1"
tokio = { version = "1.28.2", features = ["full"] }
rust-ini = "0.19"

[[bin]]
name = "space_warp-rust"
path = "src/main.rs"
